--- a/styles.css
+++ b/styles.css
@@ -188,3 +188,39 @@ footer {
     height: auto;
     vertical-align: middle; /* Alinha verticalmente os ícones com o texto */
 }
+
+
+/* Ajustes de Estilo para Mobile */
+@media (max-width: 768px) {
+    header {
+        padding: 10px 0; /* Reduz o espaçamento vertical no mobile */
+    }
+
+    .header-background {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: -20px; /* Ajuste para melhor visualização */
+        left: 0;
+        z-index: -1;
+    }
+
+    .header-content {
+        max-width: 100%; /* Utiliza toda a largura disponível */
+        padding: 0 10px; /* Adiciona um pouco de espaçamento lateral */
+    }
+
+    .logo {
+        width: 35%; /* Reduz ainda mais o tamanho da logo para mobile */
+        transform: translateY(-10px); /* Ajusta a posição da logo */
+    }
+
+    .carrinho-link {
+        top: 15px; /* Ajusta a posição do carrinho */
+        right: 15px;
+    }
+
+    .carrinho {
+        max-height: 40px; /* Reduz o tamanho do carrinho para mobile */
+    }
+}
