--- a/recrutamento.css
+++ b/recrutamento.css
@@ -67,7 +67,7 @@ header {
 }
 
 .job-details h2 {
-    color: #ff6f61;
+    color: #c8e2f1;
 }
 
 .info {
@@ -90,7 +90,7 @@ header {
 
 /* Botão Candidatar-se */
 .btn {
-    background-color: #ff6f61;
+    background-color: #c8e2f1;
     color: #fff;
     border: none;
     padding: 12px 24px;
